# agentic-data-engineering

./: .gitignore  .mcp.json  AGENTS.md  README.md  pipeline.py  pyproject.toml
.agents/skills/find-destination/: SKILL.md
.agents/skills/find-source/: SKILL.md
.agents/skills/plan-business-analyst-review/: SKILL.md
.agents/skills/plan-data-architect-review/: SKILL.md
.agents/skills/plan-ops-review/: SKILL.md
.agents/skills/plan-security-review/: SKILL.md
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/hooks/: block-direct-execution.sh  block-secret-leaks.sh  log-pipeline-run.sh  require-review-gate.sh  suggest-debug-mode.sh
.claude/rules/: tower-rules.md  workflow.md
.claude/skills/create-rest-api-pipeline/: SKILL.md
.claude/skills/data-analyst-explore/: SKILL.md
.claude/skills/debug-pipeline/: SKILL.md
.claude/skills/find-destination/: SKILL.md
.claude/skills/find-source/: SKILL.md
.claude/skills/gather-context/: SKILL.md
.claude/skills/init-tower-app/: SKILL.md
.claude/skills/plan-business-analyst-review/: SKILL.md
.claude/skills/plan-data-architect-review/: SKILL.md
.claude/skills/plan-data-engineer-review/: SKILL.md
.claude/skills/plan-ops-review/: SKILL.md
.claude/skills/plan-security-review/: SKILL.md
.claude/skills/setup-secrets/: SKILL.md
.dlt/: config.toml
.tower/reviews/: ba-review-github-claude-code-20260331.md  engineer-review-github-claude-code-issues-dev-20260331.md  engineer-review-github-claude-code-issues-prod-20260331.md
